# veasy-peasy

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  eval_report.md  install.sh  pyproject.toml  spec.md  vzpz.spec
.github/workflows/: release.yml
docs/adr/: 0001-local-only-via-ollama.md  0002-hybrid-orchestrator-mrz-fast-path.md  0003-keyword-classifier-retained-as-tool.md
docs/architecture/: modules.md
example_documents/: README.md
example_requirements/: visa_schengen.yaml  visa_uk.yaml
scripts/: generate_fixtures.py  generate_screenshot.py
src/veasy_peasy/: classifier.py  cli.py  discovery.py  engine.py  llm.py  llm_json.py  matcher.py  ollama_client.py  orchestrator.py  output.py  requirements.py  summary.py  tools.py  tracer.py  vzpz_cli.py
src/veasy_peasy/extractors/: ocr.py  passport.py  pdf.py
tests/: eval_report.md  test_classifier.py  test_e2e.py  test_engine_contract.py  test_llm.py  test_llm_json.py  test_matcher.py  test_model_eval.py  test_orchestrator.py  test_smoke.py  test_tools.py  test_tracer.py  test_vzpz_smoke.py
tests/fixtures/: engines.py  llms.py  scenarios.py
